deploy: 25ecd08e4859abaabeb35e944df7fea35c033d6c

--- a/tutorials/c_plotting.ipynb
+++ b/tutorials/c_plotting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f200005a",
+   "id": "77d7257c",
    "metadata": {},
    "source": [
     "# Plotting\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b1c920d",
+   "id": "8e54cd41",
    "metadata": {},
    "source": [
     "1. geometry\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "447612e2",
+   "id": "32a0b06e",
    "metadata": {},
    "source": [
     "All public plotting functions are associated with a list of orbitals."
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dae8025",
+   "id": "1a93db67",
    "metadata": {},
    "source": [
     "## Geometry\n",
@@ -43,13 +43,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e321b1c7",
+   "id": "acb64903",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:53:36.870994Z",
-     "iopub.status.busy": "2024-05-08T14:53:36.870794Z",
-     "iopub.status.idle": "2024-05-08T14:53:41.474119Z",
-     "shell.execute_reply": "2024-05-08T14:53:41.473501Z"
+     "iopub.execute_input": "2024-05-08T16:52:18.732471Z",
+     "iopub.status.busy": "2024-05-08T16:52:18.732260Z",
+     "iopub.status.idle": "2024-05-08T16:52:23.159924Z",
+     "shell.execute_reply": "2024-05-08T16:52:23.159392Z"
     }
    },
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfb34337",
+   "id": "c5deb468",
    "metadata": {},
    "source": [
     "If we have a stack"
@@ -82,13 +82,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "17da923b",
+   "id": "3a532383",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:53:41.476639Z",
-     "iopub.status.busy": "2024-05-08T14:53:41.476358Z",
-     "iopub.status.idle": "2024-05-08T14:53:41.812323Z",
-     "shell.execute_reply": "2024-05-08T14:53:41.811607Z"
+     "iopub.execute_input": "2024-05-08T16:52:23.162790Z",
+     "iopub.status.busy": "2024-05-08T16:52:23.162254Z",
+     "iopub.status.idle": "2024-05-08T16:52:23.492127Z",
+     "shell.execute_reply": "2024-05-08T16:52:23.491431Z"
     }
    },
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "856bcb34",
+   "id": "7e5f2455",
    "metadata": {},
    "source": [
     "## Simulation output"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "586dd3ec",
+   "id": "edd6945b",
    "metadata": {},
    "source": [
     "There is a dedicated function for showing TD simulation results. Let's illustrate this by tracking the current"
@@ -129,13 +129,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7428bdd7",
+   "id": "ea9ad537",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:53:41.815529Z",
-     "iopub.status.busy": "2024-05-08T14:53:41.815284Z",
-     "iopub.status.idle": "2024-05-08T14:53:47.128501Z",
-     "shell.execute_reply": "2024-05-08T14:53:47.127888Z"
+     "iopub.execute_input": "2024-05-08T16:52:23.495562Z",
+     "iopub.status.busy": "2024-05-08T16:52:23.495259Z",
+     "iopub.status.idle": "2024-05-08T16:52:28.711376Z",
+     "shell.execute_reply": "2024-05-08T16:52:28.710706Z"
     }
    },
    "outputs": [
@@ -169,7 +169,7 @@
     "pulse = Pulse(\n",
     "    amplitudes=[1e-5, 0, 0], frequency=2.3, peak=5, fwhm=2\n",
     ")\n",
-    "result = flake.td_run(\n",
+    "result = flake.master_equation(\n",
     "    illumination=pulse,\n",
     "    expectation_values = [flake.velocity_operator],\n",
     "    end_time=40,\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42aea59f",
+   "id": "d4c2e28f",
    "metadata": {},
    "source": [
     "We can also plot in frequency domain by specifying the omega limits"
@@ -191,13 +191,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9cbd6bd7",
+   "id": "28496205",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:53:47.131192Z",
-     "iopub.status.busy": "2024-05-08T14:53:47.130785Z",
-     "iopub.status.idle": "2024-05-08T14:53:47.844199Z",
-     "shell.execute_reply": "2024-05-08T14:53:47.843596Z"
+     "iopub.execute_input": "2024-05-08T16:52:28.714020Z",
+     "iopub.status.busy": "2024-05-08T16:52:28.713515Z",
+     "iopub.status.idle": "2024-05-08T16:52:29.393769Z",
+     "shell.execute_reply": "2024-05-08T16:52:29.393110Z"
     }
    },
    "outputs": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8c30b51",
+   "id": "ab423c07",
    "metadata": {},
    "source": [
     "## Space-dependent arrays"
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d030992",
+   "id": "a32956b3",
    "metadata": {},
    "source": [
     "The functions show_2d and show_3d are a bit more versatile than initially indicated."
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c49c97f3",
+   "id": "317ef25e",
    "metadata": {},
    "source": [
     "If we supply a \"display\" argument, we can plot an arbitrary array on the grid spanned by the orbitals and filter it by orbital tags. Let's demonstrate this by visualizing the lowest energy one particle state of the flake"
@@ -243,13 +243,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dda61c02",
+   "id": "d524cb02",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:53:47.846815Z",
-     "iopub.status.busy": "2024-05-08T14:53:47.846393Z",
-     "iopub.status.idle": "2024-05-08T14:53:48.292811Z",
-     "shell.execute_reply": "2024-05-08T14:53:48.292167Z"
+     "iopub.execute_input": "2024-05-08T16:52:29.396331Z",
+     "iopub.status.busy": "2024-05-08T16:52:29.395953Z",
+     "iopub.status.idle": "2024-05-08T16:52:29.844071Z",
+     "shell.execute_reply": "2024-05-08T16:52:29.843375Z"
     }
    },
    "outputs": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8da7e98",
+   "id": "81a92f9f",
    "metadata": {},
    "source": [
     "If you want a normalized plot of the absolute values, do"
@@ -279,13 +279,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fff6851e",
+   "id": "5c1d27fb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:53:48.295473Z",
-     "iopub.status.busy": "2024-05-08T14:53:48.294949Z",
-     "iopub.status.idle": "2024-05-08T14:53:48.674235Z",
-     "shell.execute_reply": "2024-05-08T14:53:48.673582Z"
+     "iopub.execute_input": "2024-05-08T16:52:29.846674Z",
+     "iopub.status.busy": "2024-05-08T16:52:29.846266Z",
+     "iopub.status.idle": "2024-05-08T16:52:30.192833Z",
+     "shell.execute_reply": "2024-05-08T16:52:30.192120Z"
     }
    },
    "outputs": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3175bbf",
+   "id": "73e00548",
    "metadata": {},
    "source": [
     "Additionally, if you supply the keyword argument name = \"MY-PLOT-NAME.pdf\" to any plotting function, the plot will not be displayed, but instead saved to disk in the directory you invoked Python."
