--- a/tutorials/g_td_sim.ipynb
+++ b/tutorials/g_td_sim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c5158c78",
+   "id": "9b3b763b",
    "metadata": {},
    "source": [
     "# Time-Domain simulations\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f184fcd",
+   "id": "80b24d7d",
    "metadata": {},
    "source": [
     "## Observables"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe6c5a41",
+   "id": "7b59a7d1",
    "metadata": {},
    "source": [
     "You can compute multiple observables in one run"
@@ -27,13 +27,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ba1708ed",
+   "id": "539d495f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:51:50.362523Z",
-     "iopub.status.busy": "2024-05-08T14:51:50.362310Z",
-     "iopub.status.idle": "2024-05-08T14:51:59.564097Z",
-     "shell.execute_reply": "2024-05-08T14:51:59.563492Z"
+     "iopub.execute_input": "2024-05-08T16:50:30.675055Z",
+     "iopub.status.busy": "2024-05-08T16:50:30.674546Z",
+     "iopub.status.idle": "2024-05-08T16:50:40.215020Z",
+     "shell.execute_reply": "2024-05-08T16:50:40.214387Z"
     }
    },
    "outputs": [
@@ -62,7 +62,7 @@
     "\n",
     "operators = [flake.dipole_operator, flake.velocity_operator]\n",
     "\n",
-    "result = flake.td_run(\n",
+    "result = flake.master_equation(\n",
     "    relaxation_rate = 1/10,\n",
     "    illumination = pulse,\n",
     "    expectation_values = operators,\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4ae0523",
+   "id": "cefcc1c4",
    "metadata": {},
    "source": [
     "The result object stores this info. Operators are concatenated in the order you passed them in."
@@ -81,13 +81,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "06feea96",
+   "id": "59c5ef52",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:51:59.566561Z",
-     "iopub.status.busy": "2024-05-08T14:51:59.566338Z",
-     "iopub.status.idle": "2024-05-08T14:51:59.570189Z",
-     "shell.execute_reply": "2024-05-08T14:51:59.569565Z"
+     "iopub.execute_input": "2024-05-08T16:50:40.217799Z",
+     "iopub.status.busy": "2024-05-08T16:50:40.217253Z",
+     "iopub.status.idle": "2024-05-08T16:50:40.221459Z",
+     "shell.execute_reply": "2024-05-08T16:50:40.220936Z"
     }
    },
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0033f014",
+   "id": "4d666a73",
    "metadata": {},
    "source": [
     "The induced dipole moment at timestep 10 is given by"
@@ -116,13 +116,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a501eb45",
+   "id": "d0827035",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:51:59.572471Z",
-     "iopub.status.busy": "2024-05-08T14:51:59.572158Z",
-     "iopub.status.idle": "2024-05-08T14:51:59.597993Z",
-     "shell.execute_reply": "2024-05-08T14:51:59.597404Z"
+     "iopub.execute_input": "2024-05-08T16:50:40.223864Z",
+     "iopub.status.busy": "2024-05-08T16:50:40.223573Z",
+     "iopub.status.idle": "2024-05-08T16:50:40.252136Z",
+     "shell.execute_reply": "2024-05-08T16:50:40.251583Z"
     }
    },
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75c0e87f",
+   "id": "7b7fd0bd",
    "metadata": {},
    "source": [
     "Induced current at timestep 10"
@@ -149,13 +149,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "228c3efd",
+   "id": "4dbdea30",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:51:59.600391Z",
-     "iopub.status.busy": "2024-05-08T14:51:59.600030Z",
-     "iopub.status.idle": "2024-05-08T14:51:59.604354Z",
-     "shell.execute_reply": "2024-05-08T14:51:59.603865Z"
+     "iopub.execute_input": "2024-05-08T16:50:40.254716Z",
+     "iopub.status.busy": "2024-05-08T16:50:40.254325Z",
+     "iopub.status.idle": "2024-05-08T16:50:40.258916Z",
+     "shell.execute_reply": "2024-05-08T16:50:40.258342Z"
     },
     "lines_to_next_cell": 2
    },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ebd62a0",
+   "id": "299295bd",
    "metadata": {},
    "source": [
     "We can access the Fourier transform as"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a271c766",
+   "id": "e7841941",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:51:59.606771Z",
-     "iopub.status.busy": "2024-05-08T14:51:59.606281Z",
-     "iopub.status.idle": "2024-05-08T14:51:59.975145Z",
-     "shell.execute_reply": "2024-05-08T14:51:59.974604Z"
+     "iopub.execute_input": "2024-05-08T16:50:40.261337Z",
+     "iopub.status.busy": "2024-05-08T16:50:40.260908Z",
+     "iopub.status.idle": "2024-05-08T16:50:40.676978Z",
+     "shell.execute_reply": "2024-05-08T16:50:40.676429Z"
     }
    },
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31b63ec4",
+   "id": "61b014d8",
    "metadata": {},
    "source": [
     "So we can quickly check the continuity equation"
@@ -211,13 +211,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "29026bc7",
+   "id": "3477f509",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:51:59.977953Z",
-     "iopub.status.busy": "2024-05-08T14:51:59.977584Z",
-     "iopub.status.idle": "2024-05-08T14:52:00.364191Z",
-     "shell.execute_reply": "2024-05-08T14:52:00.363519Z"
+     "iopub.execute_input": "2024-05-08T16:50:40.679761Z",
+     "iopub.status.busy": "2024-05-08T16:50:40.679439Z",
+     "iopub.status.idle": "2024-05-08T16:50:41.030720Z",
+     "shell.execute_reply": "2024-05-08T16:50:41.030096Z"
     },
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01bc6cd1",
+   "id": "ca6abdee",
    "metadata": {},
    "source": [
     "The field is also accessible"
@@ -254,13 +254,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9fb9d6dd",
+   "id": "b25e1182",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:52:00.366896Z",
-     "iopub.status.busy": "2024-05-08T14:52:00.366358Z",
-     "iopub.status.idle": "2024-05-08T14:52:00.370283Z",
-     "shell.execute_reply": "2024-05-08T14:52:00.369568Z"
+     "iopub.execute_input": "2024-05-08T16:50:41.033272Z",
+     "iopub.status.busy": "2024-05-08T16:50:41.033056Z",
+     "iopub.status.idle": "2024-05-08T16:50:41.036995Z",
+     "shell.execute_reply": "2024-05-08T16:50:41.036458Z"
     }
    },
    "outputs": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e827950f",
+   "id": "6eb83d97",
    "metadata": {},
    "source": [
     "*WARNING: The following behavior might change and the density_matrix argument may be removed*"
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbefd590",
+   "id": "427c61b2",
    "metadata": {},
    "source": [
     "## Density matrices"
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3544e209",
+   "id": "11a42077",
    "metadata": {},
    "source": [
     "If we want to only get density matrices, we can simply omit the operator list. The result object then contains a one-element list."
@@ -303,13 +303,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9fe92c3b",
+   "id": "a19f1711",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:52:00.372879Z",
-     "iopub.status.busy": "2024-05-08T14:52:00.372504Z",
-     "iopub.status.idle": "2024-05-08T14:52:02.257547Z",
-     "shell.execute_reply": "2024-05-08T14:52:02.256901Z"
+     "iopub.execute_input": "2024-05-08T16:50:41.039420Z",
+     "iopub.status.busy": "2024-05-08T16:50:41.039054Z",
+     "iopub.status.idle": "2024-05-08T16:50:42.941077Z",
+     "shell.execute_reply": "2024-05-08T16:50:42.940512Z"
     }
    },
    "outputs": [
@@ -330,7 +330,7 @@
     }
    ],
    "source": [
-    "result = flake.td_run(\n",
+    "result = flake.master_equation(\n",
     "    relaxation_rate = 1/10,\n",
     "    illumination = pulse,\n",
     "    end_time = 40,\n",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8929432f",
+   "id": "d5190b6b",
    "metadata": {},
    "source": [
     "We can convert them to energy basis"
@@ -351,13 +351,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dd04ed7a",
+   "id": "1ccada03",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:52:02.260132Z",
-     "iopub.status.busy": "2024-05-08T14:52:02.259739Z",
-     "iopub.status.idle": "2024-05-08T14:52:03.153761Z",
-     "shell.execute_reply": "2024-05-08T14:52:03.153211Z"
+     "iopub.execute_input": "2024-05-08T16:50:42.943412Z",
+     "iopub.status.busy": "2024-05-08T16:50:42.943190Z",
+     "iopub.status.idle": "2024-05-08T16:50:43.830502Z",
+     "shell.execute_reply": "2024-05-08T16:50:43.829884Z"
     }
    },
    "outputs": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b5d2e06",
+   "id": "35b4e062",
    "metadata": {},
    "source": [
     "## Occupations"
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de64ee70",
+   "id": "5a124a69",
    "metadata": {},
    "source": [
     "We can extract only site occupations"
@@ -393,13 +393,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b61fbd5f",
+   "id": "875f3048",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:52:03.156311Z",
-     "iopub.status.busy": "2024-05-08T14:52:03.155801Z",
-     "iopub.status.idle": "2024-05-08T14:52:05.132588Z",
-     "shell.execute_reply": "2024-05-08T14:52:05.131984Z"
+     "iopub.execute_input": "2024-05-08T16:50:43.833010Z",
+     "iopub.status.busy": "2024-05-08T16:50:43.832621Z",
+     "iopub.status.idle": "2024-05-08T16:50:45.788511Z",
+     "shell.execute_reply": "2024-05-08T16:50:45.787933Z"
     }
    },
    "outputs": [
@@ -420,7 +420,7 @@
     }
    ],
    "source": [
-    "result = flake.td_run(\n",
+    "result = flake.master_equation(\n",
     "    relaxation_rate = 1/10,\n",
     "    illumination = pulse,\n",
     "    density_matrix = [\"occ_x\"],\n",
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89ccd27c",
+   "id": "cbd889e1",
    "metadata": {},
    "source": [
     "We can extract only energy occupations"
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4633ef53",
+   "id": "3316e32a",
    "metadata": {},
    "source": [
     "*DANGER*: this introduces additional cubic complexity "
@@ -449,13 +449,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4b3aa906",
+   "id": "dac8d11a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:52:05.135080Z",
-     "iopub.status.busy": "2024-05-08T14:52:05.134734Z",
-     "iopub.status.idle": "2024-05-08T14:52:10.928169Z",
-     "shell.execute_reply": "2024-05-08T14:52:10.927509Z"
+     "iopub.execute_input": "2024-05-08T16:50:45.791160Z",
+     "iopub.status.busy": "2024-05-08T16:50:45.790794Z",
+     "iopub.status.idle": "2024-05-08T16:50:51.570548Z",
+     "shell.execute_reply": "2024-05-08T16:50:51.569904Z"
     }
    },
    "outputs": [
@@ -497,7 +497,7 @@
    "source": [
     "flake.set_excitation( flake.homo, flake.homo + 1, 1)\n",
     "flake.show_energies()\n",
-    "result = flake.td_run(\n",
+    "result = flake.master_equation(\n",
     "    relaxation_rate = 1/10,\n",
     "    density_matrix = [\"occ_e\"],\n",
     "    end_time = 40,\n",
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fac90f6",
+   "id": "a82a5211",
    "metadata": {},
    "source": [
     "## Combinations"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67cd892c",
+   "id": "7c7eac6d",
    "metadata": {},
    "source": [
     "We can also extract multiple things at the same time"
@@ -524,13 +524,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "683a78dc",
+   "id": "6645601d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:52:10.930676Z",
-     "iopub.status.busy": "2024-05-08T14:52:10.930269Z",
-     "iopub.status.idle": "2024-05-08T14:52:14.124312Z",
-     "shell.execute_reply": "2024-05-08T14:52:14.123692Z"
+     "iopub.execute_input": "2024-05-08T16:50:51.573273Z",
+     "iopub.status.busy": "2024-05-08T16:50:51.572783Z",
+     "iopub.status.idle": "2024-05-08T16:50:54.781232Z",
+     "shell.execute_reply": "2024-05-08T16:50:54.780600Z"
     }
    },
    "outputs": [
@@ -550,7 +550,7 @@
     }
    ],
    "source": [
-    "result = flake.td_run(\n",
+    "result = flake.master_equation(\n",
     "    relaxation_rate = 1/10,\n",
     "    density_matrix = [\"full\", \"occ_x\"],\n",
     "    expectation_values = [flake.dipole_operator],\n",
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b742556",
+   "id": "0a54fac6",
    "metadata": {},
    "source": [
     "The output will now contain three arrays: induced dipole moments, site occupations and full density matrices"
@@ -570,13 +570,13 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8a8cc8a9",
+   "id": "f908f430",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:52:14.126990Z",
-     "iopub.status.busy": "2024-05-08T14:52:14.126613Z",
-     "iopub.status.idle": "2024-05-08T14:52:14.130831Z",
-     "shell.execute_reply": "2024-05-08T14:52:14.130259Z"
+     "iopub.execute_input": "2024-05-08T16:50:54.783923Z",
+     "iopub.status.busy": "2024-05-08T16:50:54.783533Z",
+     "iopub.status.idle": "2024-05-08T16:50:54.787792Z",
+     "shell.execute_reply": "2024-05-08T16:50:54.787144Z"
     }
    },
    "outputs": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0442b39",
+   "id": "97dca201",
    "metadata": {},
    "source": [
     "## Custom computations"
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7720d9ac",
+   "id": "99fd6895",
    "metadata": {},
    "source": [
     "TBD"
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e206cfd",
+   "id": "e2a10a54",
    "metadata": {},
    "source": [
     "## Automatic Convergence Check"
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b4764a5",
+   "id": "d5e1cbac",
    "metadata": {},
    "source": [
     "TBD"
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e304bb9f",
+   "id": "33ffc48d",
    "metadata": {},
    "source": [
     "## Parameters"
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bffbe6f",
+   "id": "6052dd71",
    "metadata": {},
    "source": [
     "TBD"
