--- a/tutorials/i_linear_response.ipynb
+++ b/tutorials/i_linear_response.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "183412b9",
+   "id": "37d9c15f",
    "metadata": {},
    "source": [
     "# Linear response\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe4e46d1",
+   "id": "07b1ecfb",
    "metadata": {},
    "source": [
     "We will calculate the optical absorption in the RPA and compare it to TD simulations with a weak external field."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfd5d366",
+   "id": "a07d40a3",
    "metadata": {},
    "source": [
     "## RPA"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d16491ce",
+   "id": "bd6de15b",
    "metadata": {},
    "source": [
     "First, we set up the RPA simulation. We will consider a small triangle such that the required simulation time stays in the seconds range."
@@ -35,13 +35,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "28a3cf99",
+   "id": "a1e99634",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:51:32.571554Z",
-     "iopub.status.busy": "2024-05-08T14:51:32.571358Z",
-     "iopub.status.idle": "2024-05-08T14:51:37.231240Z",
-     "shell.execute_reply": "2024-05-08T14:51:37.230604Z"
+     "iopub.execute_input": "2024-05-08T16:50:12.100465Z",
+     "iopub.status.busy": "2024-05-08T16:50:12.100262Z",
+     "iopub.status.idle": "2024-05-08T16:50:17.220192Z",
+     "shell.execute_reply": "2024-05-08T16:50:17.219509Z"
     },
     "lines_to_next_cell": 2
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab1ab8a0",
+   "id": "e3a4f37d",
    "metadata": {},
    "source": [
     "We obtain the polarizability for an external $x$ polarized field and from its imaginary part the absorption."
@@ -71,13 +71,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "debdb506",
+   "id": "ef0c891b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:51:37.234168Z",
-     "iopub.status.busy": "2024-05-08T14:51:37.233699Z",
-     "iopub.status.idle": "2024-05-08T14:51:44.067327Z",
-     "shell.execute_reply": "2024-05-08T14:51:44.066632Z"
+     "iopub.execute_input": "2024-05-08T16:50:17.223350Z",
+     "iopub.status.busy": "2024-05-08T16:50:17.222844Z",
+     "iopub.status.idle": "2024-05-08T16:50:24.156478Z",
+     "shell.execute_reply": "2024-05-08T16:50:24.155781Z"
     }
    },
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10d9e19b",
+   "id": "aa8303ca",
    "metadata": {},
    "source": [
     "## TD"
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eef49a6e",
+   "id": "9525c382",
    "metadata": {},
    "source": [
     "For the TD simulations, we specify a spectrally broad external illumination (i.e. a narrow pulse in time domain) to capture the system's response over a large frequency range."
@@ -109,13 +109,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2481e68b",
+   "id": "fa512fdd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:51:44.071174Z",
-     "iopub.status.busy": "2024-05-08T14:51:44.070928Z",
-     "iopub.status.idle": "2024-05-08T14:51:44.118690Z",
-     "shell.execute_reply": "2024-05-08T14:51:44.117975Z"
+     "iopub.execute_input": "2024-05-08T16:50:24.160426Z",
+     "iopub.status.busy": "2024-05-08T16:50:24.160169Z",
+     "iopub.status.idle": "2024-05-08T16:50:24.206162Z",
+     "shell.execute_reply": "2024-05-08T16:50:24.205578Z"
     }
    },
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f657a5a3",
+   "id": "aea6a7b1",
    "metadata": {},
    "source": [
     "We then compute the TD dipole moment and Fourier transform it."
@@ -137,13 +137,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8090061a",
+   "id": "d6e7976a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:51:44.121454Z",
-     "iopub.status.busy": "2024-05-08T14:51:44.121260Z",
-     "iopub.status.idle": "2024-05-08T14:51:45.915312Z",
-     "shell.execute_reply": "2024-05-08T14:51:45.914659Z"
+     "iopub.execute_input": "2024-05-08T16:50:24.209419Z",
+     "iopub.status.busy": "2024-05-08T16:50:24.208972Z",
+     "iopub.status.idle": "2024-05-08T16:50:26.052387Z",
+     "shell.execute_reply": "2024-05-08T16:50:26.051751Z"
     }
    },
    "outputs": [
@@ -163,7 +163,7 @@
     }
    ],
    "source": [
-    "result = flake.td_run(\n",
+    "result = flake.master_equation(\n",
     "    expectation_values = [ flake.dipole_operator ],\n",
     "    end_time=40,\n",
     "    relaxation_rate=1/10,\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0456563",
+   "id": "f2c7b074",
    "metadata": {},
    "source": [
     "The polarizability is given by $p / E$ (we only take the $x$ - component)."
@@ -182,13 +182,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9ed43f75",
+   "id": "cfa2b024",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:51:45.917787Z",
-     "iopub.status.busy": "2024-05-08T14:51:45.917405Z",
-     "iopub.status.idle": "2024-05-08T14:51:46.346999Z",
-     "shell.execute_reply": "2024-05-08T14:51:46.346409Z"
+     "iopub.execute_input": "2024-05-08T16:50:26.055347Z",
+     "iopub.status.busy": "2024-05-08T16:50:26.054947Z",
+     "iopub.status.idle": "2024-05-08T16:50:26.507069Z",
+     "shell.execute_reply": "2024-05-08T16:50:26.506515Z"
     }
    },
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13a99481",
+   "id": "ab8fa163",
    "metadata": {},
    "source": [
     "We can now compare the two results."
@@ -211,13 +211,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "aa5022b5",
+   "id": "f3fc8e61",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T14:51:46.349733Z",
-     "iopub.status.busy": "2024-05-08T14:51:46.349419Z",
-     "iopub.status.idle": "2024-05-08T14:51:46.815355Z",
-     "shell.execute_reply": "2024-05-08T14:51:46.814729Z"
+     "iopub.execute_input": "2024-05-08T16:50:26.509902Z",
+     "iopub.status.busy": "2024-05-08T16:50:26.509543Z",
+     "iopub.status.idle": "2024-05-08T16:50:26.990395Z",
+     "shell.execute_reply": "2024-05-08T16:50:26.989733Z"
     },
     "lines_to_next_cell": 0
    },
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97c75318",
+   "id": "83323b64",
    "metadata": {},
    "outputs": [],
    "source": []
