deploy: 2df721b497ce1214e6c479cadc89d13305b62553

--- a/index.ipynb
+++ b/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d6eb0c72",
+   "id": "d0392cf6",
    "metadata": {},
    "source": [
     "## Welcome to GRANAD\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "106bb3dd",
+   "id": "41e53128",
    "metadata": {},
    "source": [
     "### Features"
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c3659e5",
+   "id": "26788504",
    "metadata": {},
    "source": [
     "- Computes optical and electronic properties \n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0745a45",
+   "id": "c28aa62c",
    "metadata": {},
    "source": [
     "### Installation\n"
@@ -38,12 +38,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39572993",
+   "id": "cee8e84e",
+   "metadata": {},
+   "source": [
+    "Just the package on Linux or WSL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d94cce2",
    "metadata": {},
    "source": [
     "```bash\n",
     "pip install git+https://github.com/GRANADlauncher/granad.git\n",
     "```\n",
+    "\n",
+    "## Linux\n",
+    "\n",
+    "The recommended way is to install with (mini-)conda.\n",
+    "\n",
+    "1. Set up miniconda: https://docs.anaconda.com/free/miniconda/index.html\n",
+    "2. Create a fresh environment: conda create -n granad 'python==3.11'\n",
+    "3. Activate: conda env activate granad\n",
+    "4. Finally, the package is installed with: pip install git+https://github.com/GRANADlauncher/granad.git\n",
+    "\n",
+    "If you want to use Jupyter notebooks, in the granad environment do: conda install jupyter. \n",
+    "\n",
+    "## Windows\n",
+    "\n",
+    "To install on Windows, set up [WSL](https://learn.microsoft.com/en-us/windows/wsl/install) first. Then, follow the instructions above.\n",
     "\n",
     "### Quickstart\n",
     "\n",
@@ -53,13 +76,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7bddc1ad",
+   "id": "2cd76473",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T16:49:55.324309Z",
-     "iopub.status.busy": "2024-05-08T16:49:55.324111Z",
-     "iopub.status.idle": "2024-05-08T16:50:08.121466Z",
-     "shell.execute_reply": "2024-05-08T16:50:08.120804Z"
+     "iopub.execute_input": "2024-05-09T09:29:00.744442Z",
+     "iopub.status.busy": "2024-05-09T09:29:00.744012Z",
+     "iopub.status.idle": "2024-05-09T09:29:12.771311Z",
+     "shell.execute_reply": "2024-05-09T09:29:12.770561Z"
     }
    },
    "outputs": [],
@@ -88,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40b0baf6",
+   "id": "6fd4fc25",
    "metadata": {},
    "source": [
     "Plot the results"
@@ -97,13 +120,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c586025c",
+   "id": "d4c6404a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T16:50:08.125657Z",
-     "iopub.status.busy": "2024-05-08T16:50:08.124367Z",
-     "iopub.status.idle": "2024-05-08T16:50:08.512057Z",
-     "shell.execute_reply": "2024-05-08T16:50:08.511428Z"
+     "iopub.execute_input": "2024-05-09T09:29:12.774907Z",
+     "iopub.status.busy": "2024-05-09T09:29:12.774675Z",
+     "iopub.status.idle": "2024-05-09T09:29:13.176001Z",
+     "shell.execute_reply": "2024-05-09T09:29:13.175298Z"
     }
    },
    "outputs": [
