deploy: 14456c02ba0380afd955e858d17fea35294e6b7e

--- a/index.ipynb
+++ b/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d0392cf6",
+   "id": "0a795880",
    "metadata": {},
    "source": [
     "## Welcome to GRANAD\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41e53128",
+   "id": "fa517c72",
    "metadata": {},
    "source": [
     "### Features"
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26788504",
+   "id": "77a87524",
    "metadata": {},
    "source": [
     "- Computes optical and electronic properties \n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c28aa62c",
+   "id": "01c65e95",
    "metadata": {},
    "source": [
     "### Installation\n"
@@ -38,31 +38,70 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cee8e84e",
+   "id": "25cbc2f8",
    "metadata": {},
    "source": [
-    "Just the package on Linux or WSL"
+    "## Linux"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6d94cce2",
+   "id": "669ab261",
+   "metadata": {},
+   "source": [
+    "The recommended way is to install with (mini-)conda."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2a0b0e8",
+   "metadata": {},
+   "source": [
+    "First, set up miniconda: https://docs.anaconda.com/free/miniconda/index.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e1e9d39",
+   "metadata": {},
+   "source": [
+    "Then, create a fresh environment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea324d09",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "conda create -n granad 'python'\n",
+    "```\n",
+    "\n",
+    "Activate the environment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdd08c1f",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "conda activate granad\n",
+    "```\n",
+    "\n",
+    "Now, optionally install jupyter.\n",
+    "\n",
+    "Finally, install the package with"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "626ce6e5",
    "metadata": {},
    "source": [
     "```bash\n",
     "pip install git+https://github.com/GRANADlauncher/granad.git\n",
     "```\n",
-    "\n",
-    "## Linux\n",
-    "\n",
-    "The recommended way is to install with (mini-)conda.\n",
-    "\n",
-    "1. Set up miniconda: https://docs.anaconda.com/free/miniconda/index.html\n",
-    "2. Create a fresh environment: conda create -n granad 'python==3.11'\n",
-    "3. Activate: conda env activate granad\n",
-    "4. Finally, the package is installed with: pip install git+https://github.com/GRANADlauncher/granad.git\n",
-    "\n",
-    "If you want to use Jupyter notebooks, in the granad environment do: conda install jupyter. \n",
     "\n",
     "## Windows\n",
     "\n",
@@ -76,13 +115,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2cd76473",
+   "id": "e66e7379",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-09T09:29:00.744442Z",
-     "iopub.status.busy": "2024-05-09T09:29:00.744012Z",
-     "iopub.status.idle": "2024-05-09T09:29:12.771311Z",
-     "shell.execute_reply": "2024-05-09T09:29:12.770561Z"
+     "iopub.execute_input": "2024-05-09T09:52:55.292552Z",
+     "iopub.status.busy": "2024-05-09T09:52:55.292114Z",
+     "iopub.status.idle": "2024-05-09T09:53:07.363909Z",
+     "shell.execute_reply": "2024-05-09T09:53:07.363251Z"
     }
    },
    "outputs": [],
@@ -111,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fd4fc25",
+   "id": "b823f3e5",
    "metadata": {},
    "source": [
     "Plot the results"
@@ -120,13 +159,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d4c6404a",
+   "id": "9a34ee41",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-09T09:29:12.774907Z",
-     "iopub.status.busy": "2024-05-09T09:29:12.774675Z",
-     "iopub.status.idle": "2024-05-09T09:29:13.176001Z",
-     "shell.execute_reply": "2024-05-09T09:29:13.175298Z"
+     "iopub.execute_input": "2024-05-09T09:53:07.368067Z",
+     "iopub.status.busy": "2024-05-09T09:53:07.367007Z",
+     "iopub.status.idle": "2024-05-09T09:53:07.727402Z",
+     "shell.execute_reply": "2024-05-09T09:53:07.726744Z"
     }
    },
    "outputs": [
